--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Prueba Android APK
+name: Build Android APK
 on:
   push:
     branches: [ main ]
@@ -8,19 +8,32 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'zulu'
+          java-version: '17'
+
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          # Usamos la versión exacta que pidió tu log
+          flutter-version: '3.38.7'
+          channel: 'stable'
+
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
-          
+
       - name: Install Flet
         run: pip install flet
-        
+
       - name: Build APK
         run: |
-          # Esto usa el comando de flet para empaquetar
-          flet build apk
+          # El comando 'yes' responde automáticamente 'y' a cualquier pregunta
+          yes | flet build apk
           
       - name: Upload APK
         uses: actions/upload-artifact@v4
